# ml-instrumentation

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: main_benchmark.yml  pr_benchmark.yml  pr_test.yml  style.yml
dev/bench/: data.js
ml_instrumentation/: Collector.py  Sampler.py  Writer.py  utils.py
scripts/: publish.sh  run_tests.sh
tests/acceptance/: test_Collector.py
tests/integration/: test_jax.py
