[tool]
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
tag_format = "$version"
version_files = ["pyproject.toml"]

[tool.ruff.lint]
select = ['F', 'E', 'W', 'B', 'NPY201']
ignore = ['E501', 'E701']

[tool.pyright]
include = ['ml_instrumentation', 'tests']
venvPath = '.'
venv = '.venv'
typeCheckingMode = 'standard'
useLibraryCodeForTypes = true

[project]
name = "ml-instrumentation"
version = "0.0.0"
description = ""
authors = [
    {name = "Andy Patterson", email = "andnpatterson@gmail.com"},
]
dependencies = [
    "numpy>=1.26,<=2.2.2",
    "filelock~=3.13",
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = {text = "MIT"}

classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[dependency-groups]
jax = [
    "jax>=0.5.0",
]
dev = [
    "commitizen>=4.2.1",
    "pip>=25.0.1",
    "pre-commit>=4.1.0",
    "pyright>=1.1.393",
    "pytest>=8.3.4",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.5",
]
